@@ -1,0 +1,2 @@
+-- Drop column calendar_date_id
+ALTER TABLE twitter_terms_frequency DROP COLUMN calendar_date_id;
