@@ -1,0 +1,2 @@
+-- Drop foreign key twitter account
+ALTER TABLE twitter_terms_frequency DROP COLUMN twitter_account_id;
