@@ -67,3 +67,7 @@
 /twitter_account/add_column_twitter_account_type_id.sql
 /twitter_account/add_foreign_key_to_twitter_account_type.sql
 /twitter_account_state/create.sql
+/twitter_terms_frequency/drop_column_twitter_account_id.sql
+/twitter_terms_frequency/add_column_tweets_id.sql
+/twitter_terms_frequency/add_foreign_key_to_tweets.sql
+/twitter_terms_frequency/drop_column_calendar_date_id.sql
